--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       target: final
     volumes:
-      - ./db/:/app/db/
+      - ./db:/db
     environment:
       - DOMAIN=omada.example.com
       - RELAY_NAME=Omada Groups Relay
@@ -13,7 +13,7 @@ services:
       - RELAY_DESCRIPTION=Omada Groups Relay
       # - RELAY_CONTACT=contact@example.com
       # - RELAY_ICON=https://example.com/icon.png
-      # - DATABASE_PATH=./db
+      - DATABASE_PATH=/db
       # - PORT=4200
     ports:
       - 4200:4200
