--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,8 @@ services:
     build:
       context: .
       target: final
-    volumes:
-      - ./db:/db
+    depends_on:
+      - postgres
     environment:
       - DOMAIN=omada.example.com
       - RELAY_NAME=Omada Groups Relay
@@ -13,7 +13,17 @@ services:
       - RELAY_DESCRIPTION=Omada Groups Relay
       # - RELAY_CONTACT=contact@example.com
       # - RELAY_ICON=https://example.com/icon.png
-      - DATABASE_PATH=/db/omada.sqlite
+      - DATABASE_PATH=postgres://omada:omada@postgres/omada?sslmode=disable
       # - PORT=4200
     ports:
       - 4200:4200
+  postgres:
+    image: postgres:17
+    volumes:
+      - ./db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=omada
+      - POSTGRES_USER=omada
+      - POSTGRES_PASSWORD=omada
+    ports:
+      - 5432:5432
